--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <body>
     <h1>Rạp xiếc Ê HÁT XÊ</h1>
     <p>Sau đây là các bài lab.</p>
-    <a href="/lab1/bai1.php">Bài 1 Lab 1</a>
-    <a href="/lab1/bai2.php">Bài 2 Lab 1</a>
-    <a href="/lab2/bai1.php">Bài 1 Lab 2</a>
-    <a href="/lab2/bai2.php">Bài 2 Lab 2</a>
-    <a href="/lab2/bai3.php">Bài 3 Lab 2</a>
-    <a href="/lab2/bai4.php">Bài 4 Lab 2</a>
+    <a href="//lab1/bai1.php">Bài 1 Lab 1</a>
+    <a href="//lab1/bai2.php">Bài 2 Lab 1</a>
+    <a href="//lab2/bai1.php">Bài 1 Lab 2</a>
+    <a href="//lab2/bai2.php">Bài 2 Lab 2</a>
+    <a href="//lab2/bai3.php">Bài 3 Lab 2</a>
+    <a href="//lab2/bai4.php">Bài 4 Lab 2</a>
     
 </body>
 </html>
